[gd_scene load_steps=32 format=2]

[ext_resource path="res://Player/player_sheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://UI/Assets/helthbahicon.png" type="Texture" id=3]
[ext_resource path="res://Colliders/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Canvas/vignette.png" type="Texture" id=5]
[ext_resource path="res://UI/NokiaCellphone.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/NokiaCellphone.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Player/DeathScreen.gd" type="Script" id=8]
[ext_resource path="res://UI/PauseMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/Camera.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Assets/AmmoBarEmpty.png" type="Texture" id=11]
[ext_resource path="res://UI/Assets/AmmoBar.png" type="Texture" id=12]
[ext_resource path="res://Colliders/SoftCollision.tscn" type="PackedScene" id=13]
[ext_resource path="res://Player/BackItemHolder.gd" type="Script" id=14]
[ext_resource path="res://Player/Hit.wav" type="AudioStream" id=15]
[ext_resource path="res://Player/Vignette.tres" type="Material" id=16]
[ext_resource path="res://UI/Inventory/Inventory.tscn" type="PackedScene" id=17]
[ext_resource path="res://UI/Assets/helthbahfull.png" type="Texture" id=18]
[ext_resource path="res://UI/Assets/helthbahempty.png" type="Texture" id=19]
[ext_resource path="res://UI/Assets/AmmoIcon.png" type="Texture" id=20]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float is_on : hint_range(0, 1);

void fragment() {
	vec4 pixel = texture(TEXTURE, UV);
	pixel.rgb += vec3(1.0*is_on, 1.0*is_on, 1.0*is_on);

	COLOR = pixel;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/is_on = 0.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.99999
height = 8.00002

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 0.95 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, 5 ) ],
"method": "add_walk_particles"
}, {
"args": [ Vector2( 0, 5 ) ],
"method": "add_walk_particles"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "flash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:material:shader_param/is_on")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.0
height = 5.69744

[sub_resource type="CircleShape2D" id=8]
radius = 4.0

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform float intensity : hint_range(0.0, 1.0);
uniform sampler2D vignette;

void fragment() {
	vec3 vignetteColor = texture(vignette, UV).rgb;
	vec4 finalColor = vec4(.6*intensity, .15, .15, (1.0-vignetteColor.r)*intensity);
	
	COLOR = finalColor;
}
"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/intensity = 0.0
shader_param/vignette = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 7 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -3 )
collision_layer = 0
script = ExtResource( 2 )
maxSpeed = 90
friction = 5.0
recoveryTime = 2.0

[node name="ScaleHelper" type="Node2D" parent="."]
position = Vector2( 0, 5 )

[node name="Sprite" type="Sprite" parent="ScaleHelper"]
material = SubResource( 2 )
position = Vector2( 0, -15.1571 )
texture = ExtResource( 1 )
flip_h = true
hframes = 6
vframes = 2
frame = 2

[node name="BackItemHolder" type="Node2D" parent="ScaleHelper/Sprite"]
show_behind_parent = true
position = Vector2( -0.0264691, 1.07965 )
rotation = -0.0999827
scale = Vector2( 1.08749, 0.92554 )
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 3 )

[node name="Camera" parent="." instance=ExtResource( 10 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 4 )
anims/Run = SubResource( 5 )

[node name="Flash" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 6 )

[node name="Hurtbox" parent="." groups=[
"player",
] instance=ExtResource( 4 )]
visible = false
collision_layer = 2
collision_mask = 2147483648

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -1, -4 )
shape = SubResource( 7 )

[node name="HurtTimer" type="Timer" parent="Hurtbox"]
one_shot = true

[node name="ItemHolder" type="Node2D" parent="."]
position = Vector2( 0, -7 )

[node name="SoftCollision" parent="." instance=ExtResource( 13 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 8 )

[node name="Sounds" type="Node2D" parent="."]

[node name="Hurt" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 15 )
volume_db = -8.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Vignette" type="ColorRect" parent="CanvasLayer"]
material = ExtResource( 16 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthThing" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/HealthThing"]

[node name="Bars" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = -6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="HBoxContainer" parent="CanvasLayer/Bars"]
margin_right = 86.0
margin_bottom = 20.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="TextureProgress" parent="CanvasLayer/Bars/HealthBar"]
margin_right = 74.0
margin_bottom = 20.0
value = 50.0
texture_under = ExtResource( 19 )
texture_progress = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Bars/HealthBar"]
margin_left = 74.0
margin_right = 86.0
margin_bottom = 20.0
rect_min_size = Vector2( 12, 20 )
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Ammobar" type="HBoxContainer" parent="CanvasLayer/Bars"]
margin_top = 14.0
margin_right = 86.0
margin_bottom = 34.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="TextureProgress" parent="CanvasLayer/Bars/Ammobar"]
margin_right = 44.0
margin_bottom = 20.0
value = 100.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Bars/Ammobar"]
margin_left = 44.0
margin_right = 56.0
margin_bottom = 20.0
rect_min_size = Vector2( 12, 20 )
texture = ExtResource( 20 )
stretch_mode = 4

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 3.20486
margin_top = 288.78
margin_right = 47.2049
margin_bottom = 302.78
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "FPS: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathScreen" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="RichTextLabel" parent="CanvasLayer/DeathScreen"]
margin_right = 300.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 16 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "[center][shake]Game Over[/shake]"
text = "Game Over"
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DeathScreen"]
margin_top = 20.0
margin_right = 300.0
margin_bottom = 36.0
alignment = 1

[node name="Continue" type="Button" parent="CanvasLayer/DeathScreen/HBoxContainer"]
margin_left = 73.0
margin_right = 128.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color = Color( 0.827451, 0.827451, 0.827451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
text = "Continue"
flat = true

[node name="Quit" type="Button" parent="CanvasLayer/DeathScreen/HBoxContainer"]
margin_left = 132.0
margin_right = 164.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color = Color( 0.827451, 0.827451, 0.827451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitDesktop" type="Button" parent="CanvasLayer/DeathScreen/HBoxContainer"]
margin_left = 168.0
margin_right = 227.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color = Color( 0.827451, 0.827451, 0.827451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
text = "Rage Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="CanvasLayer" instance=ExtResource( 17 )]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 5 )

[connection signal="tree_entered" from="." to="." method="_on_Player_tree_entered"]
[connection signal="dead" from="Hurtbox" to="." method="_on_death"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_Hurtbox_hurt"]
[connection signal="tween_all_completed" from="CanvasLayer/HealthThing/Tween" to="." method="_on_health_vig_tween_all_completed"]
[connection signal="button_up" from="CanvasLayer/DeathScreen/HBoxContainer/Continue" to="CanvasLayer/DeathScreen" method="_on_Continue_button_up"]
[connection signal="button_up" from="CanvasLayer/DeathScreen/HBoxContainer/Quit" to="CanvasLayer/DeathScreen" method="_on_Quit_button_up"]
[connection signal="pressed" from="CanvasLayer/DeathScreen/HBoxContainer/QuitDesktop" to="CanvasLayer/DeathScreen" method="_on_QuitDesktop_pressed"]
[connection signal="inventory_toggled" from="CanvasLayer/Inventory" to="Camera" method="set_cam_look"]

[editable path="Hurtbox"]
[editable path="SoftCollision"]
